--- a/Car.html
+++ b/Car.html
@@ -84,7 +84,7 @@
 
     <br>
     <hr>
-    <h2>Book Description</h2>
+    <h2>The Science of Supercars</h2>
     <p>Trace the evolution of the supercar through the technology that drives it.</p>
     <p>In The Science of Supercars, the authors describe the history of supercars, unraveling the mysteries and mechanics of the cars that changed the automotive world forever. In-depth interviews with the top names in the supercar and racing industries reveal their opinions on today's supercars and their visions for the future.
     </p>
