--- a/Exorcist.html
+++ b/Exorcist.html
@@ -84,7 +84,7 @@
 
     <br>
     <hr>
-    <h2>Book Description</h2>
+    <h2>The Exorcist</h2>
     <p>Inspired by a true story of a child’s demonic possession in the 1940s, William Peter Blatty created an iconic novel that focuses on Regan, the eleven-year-old daughter of a movie actress residing in Washington, D.C. A small group of overwhelmed yet determined individuals must rescue Regan from her unspeakable fate, and the drama that ensues is gripping and unfailingly terrifying.
     </p>
  
