--- a/GGS.html
+++ b/GGS.html
@@ -84,7 +84,7 @@
 
     <br>
     <hr>
-    <h2>Book Description</h2>
+    <h2>Guns, Germs and Steel</h2>
     <p>Why has human history unfolded so differently across the globe?</p>
     <p>Jared Diamond puts the case that geography and biogeography, not race, molded the contrasting fates of Europeans, Asians, Native Americans, sub-Saharan Africans, and aboriginal Australians.
     </p>
