--- a/Martian.html
+++ b/Martian.html
@@ -84,7 +84,7 @@
 
     <br>
     <hr>
-    <h2>Book Description</h2>
+    <h2>The Martian</h2>
     <p>Six days ago, astronaut Mark Watney became one of the first people to walk 
         on Mars.</p>
     <p>Now, he's sure he'll be the first person to die there.</p>
