--- a/Mind.html
+++ b/Mind.html
@@ -83,7 +83,7 @@
 
     <br>
     <hr>
-    <h2>Book Description</h2>
+    <h2>How Minds Change</h2>
     <p>What made a prominent conspiracy-theorist YouTuber finally see that 9/11 was not a hoax? How do voter opinions shift from neutral to resolute? Can widespread social change only take place when a generation dies out? From one of our greatest thinkers on reasoning, HOW MINDS CHANGE is a book about the science, and the experience, of transformation. </p>
     <p>When self-delusion expert and psychology nerd David McRaney began a book about how to change someone's mind in one conversation, he never expected to change his own. But then a diehard 9/11 Truther's conversion blew up his theories—inspiring him to ask not just how to persuade, but why we believe, from the eye of the beholder.</p>
     <p>Delving into the latest research of psychologists and neuroscientists, HOW MINDS CHANGE explores the limits of reasoning, the power of groupthink, and the effects of deep canvassing.</p>
