--- a/Shining.html
+++ b/Shining.html
@@ -84,7 +84,7 @@
 
     <br>
     <hr>
-    <h2>Book Description</h2>
+    <h2>The Shining</h2>
     <p>Jack Torrance's new job at the Overlook Hotel is the perfect chance for a fresh start. 
         As the off-season caretaker at the atmospheric old hotel, 
         he'll have plenty of time to spend reconnecting with his family and working on his writing. 
