--- a/Stand.html
+++ b/Stand.html
@@ -83,7 +83,7 @@
 
     <br>
     <hr>
-    <h2>Book Description</h2>
+    <h2>The Stand</h2>
     <p>First came the days of the plague. Then came the dreams. Dark dreams that warned of the coming of the dark man. The apostate of death, his worn-down boot heels tramping the night roads. The warlord of the charnel house and Prince of Evil. His time is at hand. His empire grows in the west and the Apocalypse looms.</p>
 
 
