--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,11 @@
                 <label for="email">Your Email:</label>
                 <input type="email" id="email" placeholder="email" required>
             </div><br>
+
+            <div class="form-item">
+              <label for="phone">Your phone number:</label>
+              <input type="tel" id="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            </div><br>
            
 
             <div class="form-special">
